# echo-mcp-server

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  appspec.yml  buildspec.yml  docker-compose.yml  migrate_services_table.py  pipeline.yml  prod.env  pyproject.toml  requirements.txt  taskdef.json
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/routes/bolt/: __init__.py  demo.py  food.py  stores.py  webhooks.py
app/clients/bolt_food/: README.md  pyproject.toml  setup.py
app/clients/bolt_food/.openapi-generator/: FILES
app/clients/bolt_food/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
app/clients/bolt_food/openapi_client/api/: __init__.py  dine_in_order_integration_by_waiter_api.py  menu_integration_api.py  order_integration_api.py  order_integration_partner_webhooks_api.py  pim_integration_option_and_option_groups_api.py  provider_integration_api.py
app/clients/bolt_food/openapi_client/models/: __init__.py  external_option.py  external_option_group.py  external_option_group_request.py  external_option_request.py  generic_append_existing_order.py  generic_create_order_item.py  generic_create_order_item_option.py  generic_localised_field.py  generic_menu_item.py  generic_menu_item_constraint.py  generic_menu_item_constraint_option_group_constraint.py  generic_menu_item_fee.py  generic_menu_item_fee_info.py  generic_menu_item_image_info.py  generic_menu_item_timetable.py  generic_pos_api_price.py  generic_pos_dine_in_details.py  generic_pos_item.py  generic_pos_option.py  generic_pos_price.py  generic_pos_rod_coordinates.py  generic_pos_user_address_info.py  generic_pos_user_info.py  inline_object.py  measure_with_total.py  option_group_type.py  page_query.py  post_accept_order_request.py  post_get_menu200_response.py  post_get_menu_request.py  post_mark_order_as_ready_for_pick_up_request.py  post_pim_v1_option_group_list200_response.py  post_pim_v1_option_group_list_request.py  post_pim_v1_option_group_upsert_request.py  post_pim_v1_option_list200_response.py  post_pim_v1_option_list_request.py  post_pim_v1_option_upsert_request.py  post_reject_order_request.py  post_send_cancel_order_request.py  (+17 more)
app/clients/bolt_stores/: README.md  pyproject.toml  setup.py
app/clients/bolt_stores/.openapi-generator/: FILES
app/clients/bolt_stores/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
app/clients/bolt_stores/openapi_client/api/: __init__.py  menu_integration_api.py  order_integration_api.py  order_integration_partner_webhooks_api.py  pim_integration_categories_and_ordering_api.py  pim_integration_fees_api.py  pim_integration_menu_publishing_api.py  pim_integration_pricing_api.py  pim_integration_products_api.py  pim_integration_sections_layout_api.py  provider_integration_api.py  warehouse_integration_api.py
app/clients/bolt_stores/openapi_client/models/: __init__.py  batch_create_timetables_request.py  categories_inner.py  create_tile_layout_value.py  fee.py  fee_update_request.py  fees_inner.py  generic_localised_field.py  generic_menu_item.py  generic_menu_item_constraint.py  generic_menu_item_constraint_option_group_constraint.py  generic_menu_item_fee.py  generic_menu_item_fee_info.py  generic_menu_item_image_info.py  generic_menu_item_timetable.py  generic_pos_api_price.py  generic_pos_dine_in_details.py  generic_pos_item.py  generic_pos_option.py  generic_pos_price.py  generic_pos_rod_coordinates.py  generic_pos_user_address_info.py  generic_pos_user_info.py  inline_object.py  inline_object1.py  measure_info.py  measure_with_total.py  name_availability_object.py  page_query.py  picked_item_price.py  pim_create_product_params.py  pim_edit_product_params.py  pim_v1_category_tree.py  pim_v1_menu_drafts_state.py  pim_v1_menu_drafts_state_errors_inner.py  pim_v1_menu_publish_list.py  pim_v1_menu_publish_list_menus_inner.py  pim_v1_products_import_status.py  pim_v1_products_import_status_errors_inner.py  pim_v1_products_import_status_warnings_inner.py  (+61 more)
app/core/: config.py  security.py
app/db/: database.py  redis_client.py
app/models/: __init__.py  agent.py  bolt.py  chat.py  service.py  user.py
app/routers/: __init__.py  admin.py  auth.py  chat.py  services.py
app/schemas/: __init__.py  admin.py  auth.py  chat.py  service.py
app/services/: __init__.py  auth_service.py  bolt_food_service.py  bolt_stores_service.py  chat_service.py  external_api_service.py  services_service.py
app/utils/: __init__.py  email_sender.py  jwt_handler.py  response_utils.py  websocket_manager.py
docker/: README.md
docker/nginx/: nginx.conf
